--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@upstash/redis": "^1.35.1",
     "axios": "^1.10.0",
     "dotenv": "^17.0.1",
+    "express": "^4.18.2",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1"
@@ -13,7 +14,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix Frontend/note-front  && npm run build --prefix Frontend/note-front",
     "start": "npm run start --prefix backend"
