--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^4.18.2",
     "lucide": "^0.525.0",
